src/sass/templates/_ndla_timeline.scss
/* ... */
.lo_sectionList {
  position: relative;
  //top: $base-line-height * 1.8; //*Mod for filter
  margin: 0;
  display: flex;
  flex-direction: row;
}

.lo_sectionEra {
  // display: flex;
  // flex-direction: column;
  position: relative;
}

.lo_sectionsIntroPage {
  position: relative;
  display: flex;
  flex-shrink: 0;
  // width: 110vw;
  width: 7rem;
  margin-bottom: 1.75rem;
  padding: $base-line-height 0 $base-line-height $base-line-height;

  @include breakpoint($medium) {
    width: $introPageWidth;
  }
}

/// TOPBAR > FILTER BUTTONS

// OVERRIDES
.lo_topBar_header {
  flex-wrap: wrap;
  @include breakpoint($mediumx) {
    height: $topBarHeight;
    position: fixed;
  }
}

.lo_topBar_timeline {
  @include breakpoint($mediumx) {
    top: $topBarHeight;
  }
}

.lo_sectionList {
  top: -10px;
  @include breakpoint($mediumx) {
    top: $base-line-height * 1.8;
  }
}

.lo_topBar_header h1 {
  font-size: 0.75rem;
  margin: 0;
  @include breakpoint($medium) {
    font-size: 1rem;
  }
}

// FILTERS
.lo_topBar_filters {
  display: flex;
  margin-left: $base-line-height;
  padding-bottom: $base-line-height/4;
  @include breakpoint($medium) {
    padding-bottom: 0;
  }
}

.btn_filter {
  display: flex;
  align-items: center;
  background: none;
  border: 2px solid transparent;
  height: $base-line-height * 1.5;
  border-radius: 4px;

  &:hover {
    background: white;
    border-color: $main-color;
    color: $main-color;
    svg {
      fill: $main-color;
    }
  }

  &_icon {
    width: $base-line-height/1.25;
    height: $base-line-height/1.25;
    svg {
      width: 100%;
      height: auto;
    }
  }
  &_text {
    padding-left: $base-line-height/8;
    font-weight: bold;
    font-size: 0.9rem;
  }
}

.btn_audioText {
  display: flex;
  align-items: center;
  background: $light-grey;
  border: 2px solid $middle-grey;
  height: $base-line-height * 1.5;
  border-radius: 4px;

  &:hover {
    background: white;
    border-color: $main-color;
    color: $main-color;
    svg {
      fill: $main-color;
    }
  }

  &_icon {
    width: $base-line-height/1.25;
    height: $base-line-height/1.25;
    svg {
      width: 100%;
      height: auto;
    }
  }
  &_text {
    padding: 0 $base-line-height/8;
    font-weight: bold;
    //font-size: 0.9rem;
  }
}

/// PART ON THE LEFT OF THE TIMELINE > INSTRUCTIONS

.startInstructions h1 {
  line-height: 110%;
  color: $dark-grey;
  margin-top: $base-line-height;
}

.logoNDLA {
  max-width: $base-line-height * 3;
  fill: #20588f;
  margin-top: $base-line-height;
}

.startTimeline {
  position: relative;
  top: 1.1rem;
  display: block;
  flex-shrink: 0;
  background: tint($main-color, 90%);
  width: $base-line-height * 2;
  height: calc(100% + 10px);
  border-top-left-radius: 50rem;
  border-bottom-left-radius: 50rem;
  margin-left: $base-line-height;
  box-shadow: (-6px) 0px 6px 0px rgba(black, 0.3);

  @include breakpoint($medium) {
    width: $base-line-height * 5;
    margin-left: $base-line-height * 3;
  }
}

.endTimeline {
  position: relative;
  left: -1rem;
  display: block;
  flex-shrink: 0;
  background: tint($main-color, 80%);
  width: $base-line-height * 2;
  height: calc(100% - 26px);
  border-top-right-radius: 50rem;
  border-bottom-right-radius: 50rem;

  @include breakpoint($medium) {
    width: $base-line-height * 5;
  }

  &:before {
    content: "";
    position: sticky;
    background: white;
    width: $base-line-height * 3.6;
    width: 100%;
    height: $base-line-height * 1.35;
    left: 0;
    display: block;
    z-index: 1000;
    border-bottom: 4px solid $main-color;
    @include breakpoint($medium) {
      top: $topBarHeight;
    }
  }
}

.btn_menu,
.btn_close,
.btn_back {
  display: flex;
  align-items: center;
  justify-content: center;
  // width: $base-line-height * 1.5;
  // height: $base-line-height * 1.5;
  background: none;
  border-radius: 4px;
  border: 2px solid transparent;
}

.btn_back svg {
  fill: white;
}

.btn_menu:hover,
.btn_close:hover,
.btn_back:hover {
  background: white;
  border-color: $main-color;
}

.btn_menu:hover svg,
.btn_close:hover svg,
.btn_back:hover svg {
  fill: $main-color;
}

.header_eraName {
  margin-left: $base-line-height / 2;
}

.page .btn_back {
  position: relative;
  left: -$base-line-height / 2;
  font-weight: bold;
  margin-top: $base-line-height;

  svg {
    fill: $main-color;
  }
}

// TIMESLOT

.timeSlot {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  list-style: none;
  font-weight: bold;
  align-items: flex-start;
  flex-shrink: 0;
  &_year {
    padding: 0.1rem 0 0.5rem 0;
    background: white;
    width: 100%;
    text-align: left;
    font-size: 0.9rem;
    transform: translateX(-1rem);
    box-shadow: 12px 4px 0px 0px $main-color;
  }
  &_dot {
    position: relative;
    transform: translate(-40%, -40%);
    width: $base-line-height / 2;
    height: $base-line-height / 2;
    background: $main-color;
    border-radius: 50%;
  }
  &_line {
    position: relative;
    position: absolute;
    width: 2px;
    top: 0;
    height: 97.5rem;
    background: rgba(white, 0.3);
    overflow: hidden;
  }
}

// SECTIONS/ERAS

.sectionList {
  display: flex;
  flex-direction: row;
  list-style: none;
  padding: 0;
  margin: 0;
  background: $main-color;
  margin-bottom: 1.75rem;
  box-shadow: -6px 0px 6px 0px rgb(0 0 0 / 30%);
  &_item {
    padding: 0;
    margin: 0;
    height: 100%;
    &:nth-child(odd) .lo_sectionEra {
      background: tint($main-color, 90%);
    }
    &:nth-child(even) .lo_sectionEra {
      background: tint($main-color, 80%);
    }
  }
}

/// CIRCLE ERA

.lo_circleEra {
  margin-top: 1.5rem;
  height: $circleEraHeight;
  z-index: 10;
}
/* ... */

